<resources>
    <string name="app_name">Apartment</string>
    <string name="buttonRegisterApartment">Register Apartment</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonJoinApartment">Join Apartment</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="enterPhoneNo">Enter Phone No</string>
    <string name="enterPassword">Enter Password</string>
    <string name="showPassword">Show Password</string>

    <string name="enterName">Enter Your Name</string>
    <string name="enterEmail">Enter Your Email</string>
    <string name="createPassword">Create Password</string>
    <string name="enterUpiId">Enter Your UPI Id</string>
    <string name="enterApartmentCode">Enter Your Apartment Code</string>
    <string name="buttonJoin">Join</string>
    <string name="yourInfo">Your Information</string>
    <string name="apartmentInfo">Apartment Information</string>
    <string name="registerApartmentName">Enter Apartment Name</string>
    <string name="next">Next</string>

    <string name="profile">Profile</string>
    <string name="MaintenanceDetails">Records</string>
    <string name="payment">Payment</string>
    <string name="updateMaintenance">Update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="updateMaintenanceFragment">Update Maintenance</string>
    <string name="myProfile">Profile</string>
    <string name="logout">Logout</string>
</resources>