<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterApartment">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yourInfo"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                >
            </TextView>

            <EditText
                android:id="@+id/editTextRegisterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/border"
                android:hint="@string/enterName"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="15dp" />

            <EditText
                android:id="@+id/editTextRegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/border"
                android:hint="@string/enterEmail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="15dp" />

            <EditText
                android:id="@+id/editTextRegisterPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/border"
                android:hint="@string/enterPhoneNo"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:padding="15dp" />

            <EditText
                android:id="@+id/editTextRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/border"
                android:hint="@string/createPassword"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="15dp" />

            <EditText
                android:id="@+id/editTextRegisterUpiId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/border"
                android:hint="@string/enterUpiId"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apartmentInfo"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="20dp"
                >
            </TextView>

            <EditText
                android:id="@+id/editTextRegisterApartmentName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/border"
                android:hint="@string/registerApartmentName"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="15dp" />

            <Button
                android:id="@+id/buttonRegisterNext"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="3"
                android:text="@string/next"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

</ScrollView>