<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/editTextLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterEmail"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/border"
            android:importantForAutofill="no"
            />

        <EditText
            android:id="@+id/editTextLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterPassword"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:inputType="textPassword"
            android:background="@drawable/border"
            android:importantForAutofill="no"
            />

        <CheckBox
            android:id="@+id/checkBoxLoginShowPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/showPassword"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonLogin"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                />

            <Button
                android:id="@+id/buttonLoginForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgotPassword"
                android:textStyle="bold"
                android:backgroundTint="#363333"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:textSize="11sp"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>